# Aspace

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.MD  build.bat  build.ninja  cmake_install.cmake
include/: animator.hpp  basicship.hpp  bigship.hpp  blb63dreadnaught.hpp  collisionshapes.hpp  entity.hpp  player.hpp  playercontroller.hpp  spritePart.hpp  utilities.hpp  world.hpp
rsc/xMLDATA/Dreadnaughts/: darth1B21.xml
src/: collisionshapes.cpp  entity.cpp  main.cpp
